--- a/pies.html
+++ b/pies.html
@@ -5,13 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-	<!--FONT AWESOME-->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="CSS/estilo.css">
 
-	<!--ICONO DE PAGINA-->
 	<link rel="shortcut icon" href="img/logo3.png" type="image/x-icon">
 
 </head>
@@ -42,7 +39,7 @@
 
 	 			<ul class="right_menu">
 	 				<li>
-	 					<a href="">Inicio</a>
+	 					<a href="index.html">Inicio</a>
 	 				</li>
 	 				<li>
 	 					<a href="index.html#nosotros">Nosotros</a>
