--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>JABIBI DISEÑOS - Inicio</title>
+	<title>JABIBI ACCESORIOS - Inicio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-	<!--FONT AWESOME-->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
-	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="CSS/estilo.css">
-
-	<!--ICONO DE PAGINA-->
 	<link rel="shortcut icon" href="img/logo3.png" type="image/x-icon">
+
+
+	<meta name="theme-color" content="#F3E6D7">
+	<!-- Primary Meta Tags -->
+	<meta name="title" content="Jabibi Diseños y Accesorios">
+	<meta name="description" content="Tienda virtual especializada en la confección de accesorios para el cabello. Escríbenos por WhatsApp al 8942 1555, para nosotros es un gusto atenderte!">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://kvvm22.github.io/Jabibi_Accesorios_/">
+	<meta property="og:title" content="Jabibi Diseños y Accesorios">
+	<meta property="og:description" content="Tienda virtual especializada en la confección de accesorios para el cabello. Escríbenos por WhatsApp al 8942 1555, para nosotros es un gusto atenderte!">
+	<meta property="og:image" content="https://kvvm22.github.io/Jabibi_Accesorios_/img/meta.jpeg">
 
 </head>
 <body>
