--- a/turbantes.html
+++ b/turbantes.html
@@ -29,7 +29,7 @@
 		<i class="btn_menu fas fa-bars"></i>
 		<header class="header_catalogo headerTurbantes">
 			<nav class="nav_catalogo">
-				<div class="logo"></div>
+				<div class="logo logo_catalogo"></div>
 				<ul class="menu menu_catalogo">
 	 				<li>
 	 					<a href="index.html">Inicio</a>
