--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="img/logo3.png" type="image/x-icon">
 
 
-	<meta name="theme-color" content="#F3E6D7">
+	<meta name="theme-color" content="FFD3DB">
 	<!-- Primary Meta Tags -->
 	<meta name="title" content="Jabibi Diseños y Accesorios">
 	<meta name="description" content="Tienda virtual especializada en la confección de accesorios para el cabello. Escríbenos por WhatsApp al 8942 1555, para nosotros es un gusto atenderte!">
